iWonder/engine-scheme/highlighter.css
/* NOTE: 注意引入顺序 */
@import "../color-scheme/base/color.css";
@import "../font-scheme/base/font.css";
@import "../image-scheme/base/image.css";

/* 页面 基础配置 */
:root {
  /* 基础字体大小 */
  --font-size: 16px;
  /* 页面文本宽度 */
  /* --text-area-max-width: 85vmax; */
  --text-area-max-width: 1500px;
  /* 控制单词如何被拆分换行。normal | break-all | keep-all */
  --word-break-mode: break-all;
  /* 控制长度超过一行的单词是否被拆分换行。normal | break-word */
  --overflow-wrap-mode: break-word;
}

/* TODO 逻辑区域分割线-------------------------------------------------------------------------------------*/
/* 抗锯齿渲染 */
html {
  font-size: var(--font-size);
  -webkit-font-smoothing: antialiased;
}

/* body 基础高度设置 */
/* 避免因为 header浮动 和 content定位 导致的高度塌陷问题 */
body {
  min-height: 100vh;
  display: flex;
  flex-direction: column;
}

/* TODO 逻辑区域分割线-------------------------------------------------------------------------------------*/
/* 背景色设置 */
/* 全局 / scope 背景色 */
body {
  background-color: var(--scope-bg-color);
}
/* 文本区域, 背景颜色 */
#write {
  background-color: var(--scope-text-color);
}

/* TODO 逻辑区域分割线-------------------------------------------------------------------------------------*/
/* FIXME: 背景图片轮播相关设置: /image-scheme/base/image.css" */

/* TODO 逻辑区域分割线-------------------------------------------------------------------------------------*/
/* 文本域基础设置 */
#write {
  font-family: var(--text-font-family);
  font-size: calc(var(--font-size) * 1.1);
  color: var(--text-color);
  /* 页面文本域宽度 */
  max-width: var(--text-area-max-width);
  line-height: 1.6;
  word-spacing: 0;
  letter-spacing: 0;
  word-break: var(--word-break-mode);
  overflow-wrap: var(--overflow-wrap-mode);
  text-align: justify;
  margin-bottom: 20em;
}

/* TODO 逻辑区域分割线-------------------------------------------------------------------------------------*/
/* 加粗 */
strong {
  color: var(--strong-text-color);
  background: var(--strong-bg-color);
}

/* 标记高亮 */
mark {
  color: var(--mark-text-color);
  background: var(--mark-bg-color);
}

/* 斜体 */
em {
  color: var(--italic-text-color);
  background: var(--italic-bg-color);
}

/* 下划线 */
u {
  color: var(--underline-text-color);
  background: var(--underline-bg-color);
}

/* 删除线 */
del {
  color: var(--deleteline-text-color);
  background: var(--deleteline-bg-color);
}

/* 超链接 */
a {
  color: var(--primary-color);
  text-decoration: underline solid;
  margin: 2px;
  border-bottom: 0;
  text-decoration-thickness: 1px;
  text-underline-offset: 2px;
}

/* 图片相关设置 添加投影 */
img {
  filter: drop-shadow(0 0 0.3em var(--img-shadow-color));
}

/* 搜索命中  ctrl + f  文本背景颜色 */
.md-search-hit {
  background-color: var(--search-hit-bg-color);
}

/* TODO 逻辑区域分割线-------------------------------------------------------------------------------------*/
/* 行内 `code` 代码块样式设置 */
code {
  color: var(--code-text-color);
  background-color: var(--code-bg-color);
  font-family: var(--code-font-family);
  font-style: italic;
  font-size: 0.8em;
  padding: 2px 7px 2px 3px;
  border-radius: 3px;
  margin: 2px;
}

/* 多行 ```code``` 代码块样式设置 */
.md-fences {
  display: block;
  background-size: 40px;
  color: var(--code-text-color);
  background-color: var(--code-area-bg-color);
  font-family: var(--code-font-family);
  font-style: italic;
  font-size: 0.8em;
  padding: 2px 7px 2px 3px;
  border-radius: 6px;
  margin: 2px;
}

/* 特殊设置: CodeMirror: background: transparent; 全是空的, 没有继承来自md-fences的背景色设置, 因此额外指定 */
.CodeMirror.cm-s-inner {
  border-radius: 3px;
  background-color: transparent;
}

/* TODO 逻辑区域分割线-------------------------------------------------------------------------------------*/
/* header 样式设置 */
/* NOTE 注意: #write 前缀不可取消, 否则会被其他文件重写覆盖掉. */
#write h1,
#write h2,
#write h3,
#write h4,
#write h5,
#write h6 {
  font-weight: normal;
  font-family: var(--header-font-family);
  padding: 3px;
  border-radius: 4px;
  line-height: 1.4em;
  /* 最小行高, 防止after导致的高度塌陷 */
  min-height: calc(1lh + 6px);
}

/* NOTE 双标签模式: 当h标签后缀一个 <fit> 时("fit"字符可以替换, 但不可为空),  h标签会自动变为非整行模式, 长度由内容大小撑开 */
/* 只要满足条件的 span 数量不是 2 个及以上，就认为它是唯一的 */
/* 只有 ## hello world <fit> 可以触发下列选择, <fit></fit>则无法触发 */
/* #write h1:has(span[md-inline="tag"]):not(:has(span:nth-child(2 of [md-inline="tag"]))), */
#write
  h2:has(span[md-inline="tag"]):not(
    :has(span:nth-child(2 of [md-inline="tag"]))
  ),
#write
  h3:has(span[md-inline="tag"]):not(
    :has(span:nth-child(2 of [md-inline="tag"]))
  ),
#write
  h4:has(span[md-inline="tag"]):not(
    :has(span:nth-child(2 of [md-inline="tag"]))
  ),
#write
  h5:has(span[md-inline="tag"]):not(
    :has(span:nth-child(2 of [md-inline="tag"]))
  ),
#write
  h6:has(span[md-inline="tag"]):not(
    :has(span:nth-child(2 of [md-inline="tag"]))
  ) {
  width: fit-content;
}

#write h1 {
  color: var(--header-text-color);
  background-color: var(--h1-bg-color);
  font-size: 2em;
  text-align: center;
}

#write h2 {
  color: var(--header-text-color);
  background-color: var(--h2-bg-color);
  font-size: 1.8em;
}

#write h3 {
  color: var(--header-text-color);
  background-color: var(--h3-bg-color);
  font-size: 1.6em;
}

#write h4 {
  color: var(--header-text-color);
  background-color: var(--h4-bg-color);
  font-size: 1.4em;
}

#write h5 {
  color: var(--header-text-color);
  background-color: var(--h5-bg-color);
  font-size: 1.2em;
}

#write h6 {
  color: var(--header-text-color);
  background-color: var(--h6-bg-color);
  font-size: 1.1em;
}

/* header 标题后缀标识 */
#write h2::after,
#write h2:empty:after {
  content: "[H-2]";
}
#write h3::after,
#write h3:empty:after {
  content: "[H-3]";
}
#write h4::after,
#write h4:empty:after {
  content: "[H-4]";
}
#write h5::after,
#write h5:empty:after {
  content: "[H-5]";
}
#write h6::after,
#write h6:empty:after {
  content: "[H-6]";
}

#write h2::after,
#write h3::after,
#write h4::after,
#write h5::after,
#write h6::after {
  display: block;
  color: rgb(from var(--header-text-color) r g b / 0.5);
  user-select: none;
  font-size: 0.5em;
  line-height: 1em;
  float: right;
  margin-top: 3px;
}
/* ... */

